--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import '~materialize-css/dist/css/materialize.min.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +9,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+  background: url('./assets/bg-stars-sky.jpg') center center no-repeat;
+  background-size: cover;
 }
